--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,45 @@
 language: generic
 dist: xenial
 sudo: true
+
 branches:
   only:
-  - master
-  - production
-  - fusion
+    - master
+    - production
+    - fusion
+
 before_install:
-# Download and install required tools.
-# Limit to one push build per branch.
-- go get github.com/pulumi/travisqueue
-- if [ ! -z ${TRAVIS_TOKEN} ]; then travisqueue start; fi
-# Install assume-role tool for use when deploying
-- go get -u github.com/remind101/assume-role
-# AWS CLI
-- pip install --upgrade --user awscli
-# pulumi
-- curl -fsSL https://get.pulumi.com/ | bash -s
-- export PATH=$PATH:$HOME/.pulumi/bin
-# yarn
-- npm i -g yarn
-# hugo
-# Note: We deliberately pin to Hugo v0.55.4 as more recent versions include a newer version of the Blackfriday
-# markdown renderer which regresses rendering of fenced code in lists.
-# Tracking issue: https://github.com/pulumi/docs/issues/1091
-- wget https://github.com/gohugoio/hugo/releases/download/v0.55.4/hugo_extended_0.55.4_Linux-64bit.deb
-- sudo dpkg -i hugo_extended_0.55.4_Linux-64bit.deb
+  # Download and install required tools.
+  # Limit to one push build per branch.
+  - go get github.com/pulumi/travisqueue
+  - if [ ! -z ${TRAVIS_TOKEN} ]; then travisqueue start; fi
+  # Install assume-role tool for use when deploying
+  - go get -u github.com/remind101/assume-role
+  # AWS CLI
+  - pip install --upgrade --user awscli
+  # pulumi
+  - curl -fsSL https://get.pulumi.com/ | bash -s
+  - export PATH=$PATH:$HOME/.pulumi/bin
+  # yarn
+  - npm i -g yarn
+  # hugo
+  # Note: We deliberately pin to Hugo v0.55.4 as more recent versions include a newer version of the Blackfriday
+  # markdown renderer which regresses rendering of fenced code in lists.
+  # Tracking issue: https://github.com/pulumi/docs/issues/1091
+  - wget https://github.com/gohugoio/hugo/releases/download/v0.55.4/hugo_extended_0.55.4_Linux-64bit.deb
+  - sudo dpkg -i hugo_extended_0.55.4_Linux-64bit.deb
+
+before_script:
+  # Set the timezone explicitly to make it easier to schedule content.
+  - export TZ="America/Los_Angeles"
+
 script:
-- echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
-- make travis_${TRAVIS_EVENT_TYPE}
+  - echo "TRAVIS_EVENT_TYPE=${TRAVIS_EVENT_TYPE}"
+  - make travis_${TRAVIS_EVENT_TYPE}
+
 after_script:
-# Maybe kick off next build.
-- if [ ! -z ${TRAVIS_TOKEN} ]; then travisqueue finish; fi
+  # Maybe kick off next build.
+  - if [ ! -z ${TRAVIS_TOKEN} ]; then travisqueue finish; fi
+
 notifications:
   webhooks: https://ufci1w66n3.execute-api.us-west-2.amazonaws.com/stage/travis
